src/tui/widgets/popups/snapshots/rmcl__tui__widgets__popups__error__render_tests__long_message_wraps.snap
---
source: src/tui/widgets/popups/error.rs
expression: term.backend()
---
"╭ ERROR ───────────────────────────────╮"
"│The Minecraft launcher could not reach│"
"│the Mojang version manifest after     │"
"│three retries. Check your network     │"
"│connection or proxy settings.         │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
